hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__emission@pre-mem2reg@llvm21_idivmod_checked_s_[6].snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [24 x i8] c"Attempted division by 0\00", align 1

define internal { i1, { i64, i64 }, { i32, ptr } } @_hl.main.1(i64 %0, i64 %1) !dbg !3 {
alloca_block:
  %"0" = alloca { i1, { i64, i64 }, { i32, ptr } }, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca { i1, { i64, i64 }, { i32, ptr } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  store i64 %1, ptr %"2_1", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  %"2_12" = load i64, ptr %"2_1", align 4
  %valid_div = icmp ne i64 %"2_12", 0, !dbg !17
  %is_divisor_large = icmp ugt i64 %"2_12", 9223372036854775807, !dbg !17
  %2 = zext i1 %is_divisor_large to i64, !dbg !17
  %is_dividend_negative = icmp slt i64 %"2_01", 0, !dbg !17
  %3 = zext i1 %is_dividend_negative to i64, !dbg !17
  %4 = shl i64 %2, 1, !dbg !17
  %tag = or i64 %4, %3, !dbg !17
  %quotient = sdiv i64 %"2_01", %"2_12", !dbg !17
  %remainder = srem i64 %"2_01", %"2_12", !dbg !17
  %result = alloca { i64, i64 }, align 8, !dbg !17
  switch i64 %tag, label %non_negative_smoldiv [
    i64 1, label %negative_smoldiv
    i64 2, label %non_negative_bigdiv
    i64 3, label %negative_bigdiv
  ], !dbg !17

negative_bigdiv:                                  ; preds = %entry_block
  %5 = add i64 %"2_01", %"2_12", !dbg !17
  %6 = insertvalue { i64, i64 } { i64 -1, i64 poison }, i64 %5, 1, !dbg !17
  store { i64, i64 } %6, ptr %result, align 4, !dbg !17
  br label %finish, !dbg !17

negative_smoldiv:                                 ; preds = %entry_block
  %7 = insertvalue { i64, i64 } poison, i64 %quotient, 0, !dbg !17
  %8 = insertvalue { i64, i64 } %7, i64 0, 1, !dbg !17
  %9 = sub i64 %quotient, 1, !dbg !17
  %10 = add i64 %"2_12", %remainder, !dbg !17
  %11 = insertvalue { i64, i64 } poison, i64 %9, 0, !dbg !17
  %12 = insertvalue { i64, i64 } %11, i64 %10, 1, !dbg !17
  %is_rem_0 = icmp eq i64 %remainder, 0, !dbg !17
  %13 = select i1 %is_rem_0, { i64, i64 } %8, { i64, i64 } %12, !dbg !17
  store { i64, i64 } %13, ptr %result, align 4, !dbg !17
  br label %finish, !dbg !17

non_negative_bigdiv:                              ; preds = %entry_block
  %14 = insertvalue { i64, i64 } { i64 0, i64 poison }, i64 %"2_01", 1, !dbg !17
  store { i64, i64 } %14, ptr %result, align 4, !dbg !17
  br label %finish, !dbg !17

non_negative_smoldiv:                             ; preds = %entry_block
  %15 = insertvalue { i64, i64 } poison, i64 %quotient, 0, !dbg !17
  %16 = insertvalue { i64, i64 } %15, i64 %remainder, 1, !dbg !17
  store { i64, i64 } %16, ptr %result, align 4, !dbg !17
  br label %finish, !dbg !17

finish:                                           ; preds = %negative_bigdiv, %non_negative_bigdiv, %negative_smoldiv, %non_negative_smoldiv
  %result3 = load { i64, i64 }, ptr %result, align 4, !dbg !17
  %17 = insertvalue { i1, { i64, i64 }, { i32, ptr } } { i1 true, { i64, i64 } poison, { i32, ptr } poison }, { i64, i64 } %result3, 1, !dbg !17
  %18 = select i1 %valid_div, { i1, { i64, i64 }, { i32, ptr } } %17, { i1, { i64, i64 }, { i32, ptr } } { i1 false, { i64, i64 } poison, { i32, ptr } { i32 2, ptr @0 } }, !dbg !17
  store { i1, { i64, i64 }, { i32, ptr } } %18, ptr %"4_0", align 8, !dbg !17
  %"4_04" = load { i1, { i64, i64 }, { i32, ptr } }, ptr %"4_0", align 8
  store { i1, { i64, i64 }, { i32, ptr } } %"4_04", ptr %"0", align 8
  %"05" = load { i1, { i64, i64 }, { i32, ptr } }, ptr %"0", align 8
  ret { i1, { i64, i64 }, { i32, ptr } } %"05"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !12, !12}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, { i64, i64 }, { i32, ptr } }", file: !2, size: 28, align: 8, elements: !8)
!8 = !{!9, !10, !13}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, i64 }", file: !2, size: 16, align: 8, elements: !11)
!11 = !{!12, !12}
!12 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!13 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i32, ptr }", file: !2, size: 12, align: 8, elements: !14)
!14 = !{!15, !16}
!15 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_unsigned)
!16 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!17 = !DILocation(line: 27062, column: 402, scope: !3)
